# uget

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  meson.build  meson.options  vcpkg.json
.github/workflows/: ci.yml
cmake/: config.h.in
docs/: BUILDING.md  BUILD_WINDOWS.md  DEVELOPER.md
include/: core.h
packaging/windows/: uget.rc
src/: core.c  main.c
tests/: CMakeLists.txt  meson.build  test-json.c  test-jsonrpc.c  test-plugin+app.c  test-uglib.c
tools/: make-dist-linux.sh  make-dist-windows.bat
uget/: UgetAria2.c  UgetAria2.h  UgetPluginMega.c  UgetRpc.c  meson.build
uglib/: UgHtmlEntry.c  UgHtmlFilter.c  UgJson-custom.c  UgJsonFile.c  UgJsonrpc.c  UgJsonrpc.h  UgSocket.c  UgSocket.h  UgStdio.h  UgUri.c  UgUtil.c  meson.build
ui-gtk/: UgtkAboutDialog.c  UgtkApp-callback.c  UgtkApp-main.c  UgtkApp-timeout.c  UgtkApp-ui.c  UgtkApp.c  UgtkApp.h  UgtkBanner.c  UgtkBatchDialog.c  UgtkCategoryForm.c  UgtkConfig.c  UgtkConfirmDialog.c  UgtkDownloadForm.c  UgtkMenubar-ui.c  UgtkMenubar.c  UgtkNodeDialog.c  UgtkNodeView.c  UgtkProxyForm.c  UgtkScheduleForm.c  UgtkSelector.c  UgtkSequence.c  UgtkSettingDialog.c  UgtkSettingForm.c  UgtkSummary.c  UgtkSummary.h  UgtkTraveler.c  UgtkTrayIcon.c  UgtkTrayIcon.h  meson.build
